--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Tic-Tac-Toe</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="./tic-tac-toe.ico">
     <link rel="stylesheet" href="./src/index.css">
   </head>
